--- a/upgrade/.htaccess
+++ b/upgrade/.htaccess
@@ -1,2 +1,2 @@
 php_value max_execution_time 600
-php_value auto_prepend_file "media/sf_openeclass/is_admin.php"
+php_value auto_prepend_file "/var/www/html/is_admin.php"
